tests/NormalTests/paczka1/fuzzy1/22951177.err
Error in line 1: 1EMK S324 64,7
Error in line 2: 1EMK S638 52,1
Error in line 4: yhlPTgSzCd7 S95 5b,7
Error in line 7: vQDj3Xqjqn S324 31,1
Error in line 9: vQDj3Xqjqn S95 67,1
Error in line 13: Kks S727 61,7
Error in line 5: yhlPTgSzCd7 S95 21,0
Error in line 34: vQDj3Xqjqn S324 68,7
